# myuplink

./: GitVersion.yml  README.md  notes  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build-publish.yml  ci.yml
examples/: example1.py  example2.py  example3.py  example_enum_values.py  example_get_names.py  example_specific_points.py  example_zones.py  my_token.py
myuplink/: __init__.py  api.py
src/MyUplink.Pip/: myuplink.py  setup.py
src/myuplink/: __init__.py  _test.py  api.py  auth.py  auth_abstract.py  exceptions.py  models.py  names.py
src/myuplink_example/: test.py
tests/: __init__.py  conftest.py  const.py  test_methods.py  test_models.py
tests/fixtures/: dev_batman.json  dev_joker.json  dev_robin.json  device_points.json
