[metadata]
name = myuplink
version = 0.0.6
author = Peter Winkler
author_email = peter@fluxi.dk
description = API package for myUplink
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pajzo/myuplink
project_urls =
    Bug Tracker = https://github.com/pajzo/myuplink/issues
    repository = https://github.com/pajzo/myuplink
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src